--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   fl_chart: ^0.63.0
   percent_indicator: ^4.2.3
+  sensors_plus: ^3.0.3
+  water_bottle: ^0.0.7
 
 dev_dependencies:
   flutter_test:
